syntax = "proto3";
package cosmonaut.blog.blog;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/cosmonaut/blog/x/blog/types";

// GenesisState defines the blog module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
    // this line is used by starport scaffolding # ibc/genesis/proto
}
